Bug 249335 - Conceptual Bug in First Ionization Energy
Summary: Conceptual Bug in First Ionization Energy
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.30
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-28 17:37 UTC by Davide
Modified: 2010-09-01 21:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide 2010-08-28 17:37:54 UTC
Version:           0.30 (using KDE 4.3.5) 
OS:                Linux

According to some data from official IUPAC periodic table i've found that for all elements the value of first ionization energy is surely is about a factor 1000 lower than the real value in electron-volt completely wrong is the same value expressed in kJ/mol.

Reproducible: Always

Steps to Reproduce:
click on any elements



OS: Linux (x86_64) release 2.6.31.12-0.2-desktop (OpenSuse 11.2)
Compiler: gcc
Comment 1 Etienne 2010-09-01 21:14:56 UTC
SVN commit 1170654 by erebetez:

The data is now in eV and needs to be calculated in kJ/mol.

BUG: 249335

 M  +1 -1      kalziumutils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170654