The data is now in eV and needs to be calculated in kJ/mol.

BUG: 249335

svn path=/trunk/KDE/kdeedu/kalzium/; revision=1170654